SPECIFICATION/history/v052/non-functional-requirements.md
# non-functional-requirements.md -- livespec-console-beads-fabro

This document MUST be read alongside `spec.md`, `contracts.md`,
`constraints.md`, and `scenarios.md`. It enumerates the project's
non-functional requirements: contributor-facing concerns -- the
development environment, repository tooling, build and test discipline,
architectural invariants on the implementation, and contributor
workflow -- that are NOT observable at the console's operator-facing
TUI/CLI/API surface.

The four top-level `##` sections below mirror the same four-file
boundary the operator-facing spec uses (`Spec` / `Contracts` /
`Constraints` / `Scenarios`) plus a `Boundary` preamble, so
contributors and agents apply the same categorization rule when landing
new content.

## Boundary

`non-functional-requirements.md` covers concerns of the form "how the
console is built, tested, and maintained". The litmus test for new
content: a constraint a console operator could observe stays in the
operator-facing functional files; a constraint that binds only the
project's contributors lives here.

The boundary against the operator-facing functional files:

- Operator-facing intent or behavior MUST stay in `spec.md`.
- Operator-facing wire contracts (event/command envelopes, persistence
  schemas, adapter and TUI contracts) and operator-facing
  documentation-surface contracts (the user-documentation tree and the
  settings doc the completeness check reads) MUST stay in `contracts.md`.
- Constraints whose violation a console operator could observe MUST
  stay in `constraints.md` (the single-binary multi-mode runtime shape
  and the event-sourcing safety guarantees).
- Operator-facing scenarios MUST stay in `scenarios.md`.

The trickiest boundary is `constraints.md` <->
`non-functional-requirements.md`: constraints whose violation an
operator could observe MUST stay in `constraints.md`; constraints that
bind only the project's contributors MUST move here. The implementation
language, the railway-oriented error discipline, the bounded-context
layering, the architecture tests, the quality gate, and the behavioral
coverage discipline are all contributor-facing and live here; the
event-sourcing safety guarantees an operator relies on stay in
`constraints.md`.

The decision rule for each section below:

- `## Spec` -- contributor-facing process intent and behavior: the
  commit discipline and what "done" means. Mirrors `spec.md`'s role.
- `## Contracts` -- contributor-facing toolchain and invocation
  surface: the tools the project depends on, the `just check`
  aggregate, the quality gate, the behavioral-coverage linkage, and the
  family secret convention. Mirrors `contracts.md`'s role.
- `## Constraints` -- architectural invariants on the implementation:
  language, error handling, bounded-context layering, and architecture
  tests. Mirrors `constraints.md`'s role.
- `## Scenarios` -- Gherkin-style scenarios for contributor-facing
  workflows. Empty initially; populated when a specific contributor
  flow needs to be pinned.

## Spec

This section enumerates the project's contributor-facing process intent
and behavior -- the analogue of `spec.md`'s role for the
operator-facing surface.

### Red-Green-Replay

Rust product changes MUST follow the family Red-Green-Replay commit
discipline, and the repo MUST enforce it mechanically:

1. The Red commit stages the test only and records the failing-test
   evidence.
2. The Green amend stages the implementation and records passing
   evidence.
3. The final commit carries test and implementation plus both trailer
   sets.

A repository hook (`commit-msg`) and the `just check` aggregate MUST
enforce this discipline; a commit that violates the staged-phase or
trailer requirements MUST be rejected. The enforcing check MUST be a
first-class check in this repository (this console is currently the
family's only Rust component), porting the discipline of livespec's
`dev-tooling/checks/red_green_replay.py`. Until that check is wired,
this requirement is unmet, not waived.

Non-product or spec-only changes MAY use the family
non-Python/non-product exemption pattern.

## Contracts

This section enumerates the contributor-facing toolchain and invocation
surface -- the analogue of `contracts.md`'s role for the
operator-facing surface.

### Quality Gate

The contributor quality gate is split across three surfaces by cost and
determinism. Fast, deterministic checks run in the inner loop; slow or
non-deterministic checks run on the merge gate and nightly so they
cannot slow or thrash the implementation loop.

**Inner loop -- `just check` (fast + deterministic; runs locally and,
except for a code-neutral documentation change classified below, in CI
on every push and pull request).** It MUST include:

- `cargo fmt --check`
- `cargo clippy --all-targets --all-features -- -D warnings` (the
  workspace already denies `unwrap`, `expect`, `panic`, `todo`, and
  `unimplemented`, and forbids `unsafe`)
- tests run on both the standard runner (`cargo test`, which also exercises doctests `cargo nextest` does not) and a modern Rust test runner (`cargo nextest`)
- coverage gated at **100% line** and **100% region** coverage of
  every **reachable** line and region, both measured in the
  **merged, cross-instantiation view** and both requiring ZERO
  uncovered, with no allowance, tolerance, or disposition record. A
  source line is covered iff any instantiation of any function
  spanning it executes it. The line metric MUST NOT be llvm-cov's own
  line summary (`--fail-under-lines`), because that summary merges a
  function's instantiations by independent scalar maxima of its
  line and covered counts rather than by a per-line union, and so
  reports missed lines that correspond to no source line. The region
  gate is enforced today, as the `coverage-region-gate` obligation.
  That region target is defined
  against the merged reachable-region view rather than the raw
  `cargo llvm-cov --workspace --lib` **summary** region count, because
  that summary over-reports uncovered regions by an llvm-cov cross-object
  merge artifact: under `--workspace` a single non-generic library item
  is compiled into several crates' `--lib` test binaries and counted
  uncovered in the objects that link but never call it, even when every
  reachable region is exercised. The merged reachable-region view is the
  number reported by a scalar-max merge over `--json`
  `data[0].functions[].regions` (a region is covered iff its maximum
  execution count across instantiations is non-zero), equivalently by
  `llvm-cov show` across all workspace objects with
  `-show-instantiations=false` rendering no `^0`. Both bind **every**
  workspace library (`--lib`) target with **no per-crate carve-outs** --
  `console-domain`, `console-application`, `console-eventstore`,
  `console-tui`, `console-cli`, and any future library crate.
  Coverage is a design forcing-function, not a QA afterthought: code
  that cannot be exercised by a meaningful unit test MUST be treated as
  a cohesion/coupling smell and redesigned. **No coverage exclusions are
  permitted** -- regions the language makes uncoverable (macro-generated
  code, exhaustiveness arms for states the type system already makes
  impossible) MUST be eliminated by restructuring, never annotated away;
  a UI or I/O branch that resists coverage (e.g. in the TUI or the SQLite
  event store) is a redesign signal, not grounds for a carve-out. Reading
  the region target as the merged reachable-region view is a measurement
  correction, not a coverage exclusion: no region, arm, or line is
  exempted, and the **No coverage exclusions are permitted** clause above
  stands in full. The binary entry point (`main.rs`) is the only
  uncovered shim (e.g. `console-cli`'s `main.rs`); all testable logic
  lives in the covered library targets. (`--branch` coverage is unstable
  in `cargo llvm-cov`, so **line** and **region** coverage, both in the
  merged view, are the falsifiable knobs that gate today.)
- property tests for pure logic and replay/projector behavior
- dependency-audit checks: `cargo deny` (advisories, licenses, bans, sources) and `cargo machete` (unused-dependency detection)
- architecture checks (see `## Constraints` -> Architecture Tests)
- the behavioral-coverage linkage check, once its checker lands (see
  Behavioral Coverage below)

`just check` MUST NOT include fuzz or mutation runs.

**Merge gate -- CI on every pull request not classified as code-neutral
documentation-only (in addition to `just check`).** It MUST include:

- **Fuzzing.** Each fuzz target -- at minimum canonical event-envelope
  decoding, adapter normalization, and source-payload parsing -- MUST
  run a bounded libFuzzer pass of at least 60 seconds per target,
  seeded from a committed regression corpus. Any new crash, timeout, or
  OOM MUST fail the merge. Every input that has ever crashed a target
  MUST be committed to the corpus so the crash can never silently
  regress.
- **Mutation.** `cargo mutants` MUST run scoped to the changed lines
  (`--in-diff`) over the logic crates (`console-domain`,
  `console-application`), using the project test runner
  (`--test-tool nextest`) with a bounded `--timeout`. The merge MUST
  fail on any surviving (MISSED) mutant not on the justified-survivor
  allow-list. The score is NOT gated at a blind 100% -- equivalent
  mutants are unkillable by construction. The allow-list is maintained
  in-source via `#[mutants::skip]` with a mandatory justification
  comment (preferred: visible and diff-reviewable), or via a
  `mutants.toml` path/regex filter for a whole untestable module or a
  permanently-ignored class such as `Debug` implementations.

**Code-neutral documentation lane -- CI on classified documentation-only
pull requests and canonical-branch pushes.** CI MUST classify a change as
code-neutral documentation-only only when every changed path is one of:

- `CHANGELOG.md`;
- a Markdown file beneath `.ai/` or `plan/`; or
- `docs/doc-custody.md` or `docs/factory-confirmations.md`.

Each changed endpoint MUST be a non-executable regular file (Git mode
`100644`) or the absent side of a regular-file addition or deletion; a type,
mode, symlink, or submodule change MUST select the full gate. Both source and
destination paths of a rename MUST satisfy the allow-list. `README.md`,
`AGENTS.md`, `CLAUDE.md`, and the documentation files consumed by Rust
lockstep and completeness tests are deliberately outside the allow-list. A
path beneath `SPECIFICATION/`, `.fabro/`, `.claude-plugin/`, `.github/`, a
source or test tree, or a manifest or lockfile MUST select the full gate even
when its filename ends in `.md`; every other unrecognized path MUST also
select the full gate. An empty diff, an unavailable base or head commit, or
any classifier error MUST fail closed to the full gate.

For a change classified as code-neutral documentation-only, CI MUST NOT
schedule the Rust compile/test matrix, the real-TUI end-to-end job, mutation
testing, or fuzzing. It MUST still run the change classifier and the exact
lightweight recipes `just check-doctor-static`, `just check-charters`, `just
check-plan-no-tombstone`, `just check-plan-record-conformance`, and `just
check-plan-anchor-declared`, and it MUST report the same required `ci-green`
context used by the full gate. The `ci-green` job MUST treat a skipped
code-only job as neutral only when the classifier succeeded and selected the
documentation lane. It MUST fail if any lightweight job is skipped, fails, or
is cancelled, or if any full-gate job is skipped after the classifier selected
the full gate. Every other change MUST run the full inner and merge gates
above. The documentation-only lane MUST NOT reduce the nightly gate.

**Nightly -- scheduled run against the canonical branch.** It MUST
include a full fuzz soak (a longer per-target budget) and a full
`cargo mutants` sweep over the logic crates. A nightly finding (a new
crash, or a new surviving mutant not on the allow-list) MUST NOT fail
the canonical branch; it MUST instead file a chore work-item in the
project's work-items ledger (the `livespec-console-beads-fabro`
tenant), through the tailnet beads write ingress described below. That
ingress files the finding with a single `bd create`; its request line
carries a fingerprint, a title, and an optional body, and no lifecycle
status, rank, or priority can be expressed through it -- `bd create`
has no status flag at all, and the ingress passes no priority. The
filed item therefore lands at the beads substrate's default `open`
status, OUTSIDE the orchestrator's work-item lifecycle states, and
unranked -- AT THE FILING STEP.
That landing does not rest there. The orchestrator's Dispatcher ledger
normalization adopts every beads-native `open` row into `backlog` and
assigns it a real, non-sentinel rank (repo
`thewoolleyman/livespec-orchestrator-beads-fabro`,
`SPECIFICATION/contracts.md`, section "Work-item beads-issue mapping",
sub-bullet "Adoption of a row a non-lifecycle writer left `open`
assigns it a real rank"). That adoption is an orchestrator primitive:
it runs console-unaware and label-unaware, treating a
`ci-soak-finding` item exactly as it would any other non-lifecycle-
writer `open` row. This specification CONSUMES that adoption and
asserts no placement, transition, or rank of its own -- it restores
none of the "top of the rank order" placement obligation this clause
previously removed, because expressing rank is still something no
actor in this ingress performs, and an orchestrator primitive stays
the orchestrator's to assert, never this one's.
What the filing MUST guarantee is narrower and real: the finding is
durably recorded in the tenant, labelled `ci-soak-finding` and carrying
its fingerprint, so it is recoverable by label. A nightly finding MUST
NOT be filed into `ready` -- the orchestrator's adoption lands it at
`backlog`, never `ready`.
Nightly chore filing is **idempotent**: the nightly MUST derive a
stable finding signature -- for a fuzz crash, a hash of the reproducing
input (or the crash backtrace); for a surviving mutant, its `(source
file, line, mutation-operator)` identity -- and MUST render it as a
fingerprint matching `^[a-z0-9]([a-z0-9-]{0,62}[a-z0-9])?$` (a
DNS-label-like slug of at most 64 characters), which is the dedup key
and is persisted on the filed work-item. The ingress MUST suppress a
filing when it observes an open (non-closed) chore already carrying
that fingerprint, and file only when it observes none -- the suppression
is host-side, since the request surface is single-verb by design; once a
chore for a finding has been closed, a later recurrence of that finding
files again. The check is observational, not atomic: two concurrent runs
for the same finding MAY each observe no open chore and both file, and
this benign list-then-create race is ACCEPTED rather than closed, since
closing it would mean widening the single-verb surface that `dolt-server`
ratifies. The pre-existing open chore MAY be stale -- its detail can lag,
and it does not re-surface a new finding masked behind it -- which is
acceptable because the soak is expensive and any fix re-runs the soak
manually to surface the current finding set; the obligation is that each
distinct finding is tracked at least once, not that every open chore
stays current or that it is tracked exactly once.
That write ingress is an SSH forced command the shared Dolt host
exposes on the tailnet, accepting a single
`create <fingerprint> <base64url-title> [<base64url-body>]` request. It
performs the filing host-side under its own pinned `bd`, records the
fingerprint on the work-item, and takes a server-assigned id rather
than a caller-chosen deterministic one, so a re-file after a close
cannot collide with the closed chore's id.
CI MUST NOT hold the work-items database credential: it authenticates
to the ingress with an SSH key alone, and the database port remains
bound to loopback. The Beads/Fabro Family Secret Convention below
continues to govern this repository's own processes, not CI-held
credentials and not the ingress host's, which `dolt-server` governs
under its own sealed credential profile.
Because that ingress is reachable only from the tailnet, the nightly
MUST run on the self-hosted, on-tailnet runner pool; scheduled onto a
runner with no tailnet identity it MUST fail loudly rather than
complete while filing nothing.

```mermaid
flowchart TB
  Classify["classify changed paths (fail closed)"]
  subgraph Docs["code-neutral documentation lane"]
    Static["doctor-static + charter validation"]
    Tombstone["plan tombstone + record + anchor validation"]
  end
  subgraph Inner["just check -- full inner loop"]
    Fmt["fmt"]
    Clippy["clippy -D warnings"]
    Tests["nextest"]
    Coverage["coverage 100% line + region (lib, merged view)"]
    Props["property tests"]
    Audit["audit / deny"]
    Arch["architecture checks"]
    BehLink["behavioral-coverage link"]
  end

  subgraph Merge["CI merge gate (per PR)"]
    Fuzz["fuzz >=60s/target, no new crash"]
    Mutants["mutants --in-diff, no unjustified survivor"]
  end

  subgraph Night["nightly (canonical branch)"]
    FuzzSoak["fuzz soak"]
    MutantsFull["full mutation sweep"]
    Chore["finding -> open work-item (never fail master)"]
  end

  Classify -->|docs only| Docs --> Green["ci-green"]
  Classify -->|other / uncertain| Inner --> Merge --> Green
  Merge --> Night
  FuzzSoak --> Chore
  MutantsFull --> Chore
```

### Behavioral Coverage

Every normative behavior clause -- every `MUST` / `MUST NOT` / `SHOULD`
/ `SHOULD NOT` clause in `spec.md`, `contracts.md`, `constraints.md`,
and this document -- MUST link to a Gherkin scenario, and every scenario
MUST have a corresponding top-of-pyramid acceptance/integration test.
Operator-facing clauses link to a `##` H2 section in `scenarios.md`;
this document's own contributor-facing clauses link to a `##` H2 section
in `## Scenarios` below. This clause -> scenario -> test chain is the
primary guard that the implementation realizes the specification and
that no specified behavior silently regresses.

The linkage MUST be enforced by a mechanical check, run inside
`just check` and CI, implemented as a first-class check in this
repository -- porting the discipline of livespec's Python plumbing
(`dev-tooling/checks/behavior_scenario_link.py` for the clause ->
scenario guardrail, the shared `spec_clauses.py` gap-id primitive, and
the `tests/heading-coverage.json` link registry).

Once it exists, the check MUST run in **`fail` mode** -- not advisory:
the build fails on any normative clause not linked to a scenario, and on
any scenario without a corresponding test. Implementing that Rust checker
-- and backfilling every clause -> scenario -> test link so it passes --
is a **release-blocking, highest-priority obligation**, tracked as the
`scenario-test-rust-checker` work-item; the gate attaches to that real
checker and runs in `just check` and CI the moment it lands.

Until the checker lands, the requirement is enforced by that tracked
release-blocking obligation, NOT by a fail-closed CI placeholder. A
placeholder that hard-fails CI for a not-yet-built checker was found to
deadlock the merge gate -- it blocks every merge, including the checker's
own PR and unrelated work -- so it is NOT used. Enforcement attaches to
the real checker, never to its absence.

**Binding mechanism.** A scenario is identified by its `scenarios.md`
(or `## Scenarios`) H2 section heading. A clause is bound to a scenario,
and a scenario to its top-of-pyramid acceptance/integration test,
through the `tests/heading-coverage.json` link registry (the `clauses[]`
link shape ported from livespec). A link whose scenario name does not
resolve to a live H2 heading, or a scenario with no registered test,
MUST NOT satisfy the guardrail.

### Beads/Fabro Family Secret Convention

The console and its docs MUST use the current family secret convention:
the 1Password Environment wrapper exports one bare `BEADS_DOLT_PASSWORD`.
There is no per-tenant `BEADS_DOLT_PASSWORD_<tenant>` variable and no
per-tenant-to-bare mapping. Secrets MUST never be committed or echoed.
Every process IN THIS REPOSITORY that needs work-items access MUST
obtain `BEADS_DOLT_PASSWORD` through this convention. CI MUST NOT hold
it: CI writes to the work-items ledger only through the tailnet beads
write ingress, authenticating with an SSH key alone (see the nightly
clause above). How the ingress host in turn credentials its own `bd` is
NOT governed by this convention and MUST NOT be asserted here -- that
host is `dolt-server`, whose ratified credential-profile contract seals
a dedicated `ci-writer` credential outside the family wrapper.

### Cross-Repo Action-Surface Parity

The console's action registry MUST be covered by a cross-repo PARITY
check asserting that the registry accounts for the orchestrator's
published human action surface, run inside `just check` and CI. An
action the orchestrator gains and the console never binds MUST be a red
build, never a silent gap.

Every deliberate omission from the parity mapping MUST carry a
recorded, non-empty reason -- the allowlist-with-reasons idiom -- so a
gap is either bound, or explained, never merely absent.

The check MUST be able to fail, demonstrated rather than assumed: it is
expected to be born red against any currently-unbound published valve
action, and that born-red run is its red demonstration. A parity check
that cannot be shown red is vacuous and MUST NOT satisfy this
requirement.

## Constraints

This section enumerates the architectural invariants on the
implementation -- the analogue of `constraints.md`'s role for the
operator-facing surface.

### Implementation Language

- Product code MUST be Rust.
- `unsafe` is forbidden by default: crates MUST use
  `#![forbid(unsafe_code)]` unless a future spec revision grants a
  narrow exception.

The single-binary multi-mode runtime shape is operator-observable and
its normative force is stated in `constraints.md`.

### Railway-Oriented Programming

- Expected failures MUST be represented with typed `Result` values.
- Panics are bugs, not domain control flow.
- Domain and application code MUST NOT use `unwrap` or `expect` outside
  tests and startup wiring.
- Error types MUST distinguish domain rejection from infrastructure
  failure.
- Use cases SHOULD read as railway pipelines: validate, transform, call
  port, map errors, and emit events.

### Domain-Driven Design

The workspace layering invariants (the single source of truth that the
Architecture Tests below enforce):

- Bounded contexts MUST own their language, commands, events,
  invariants, and projections.
- Domain crates MUST NOT depend on infrastructure: adapters, the SQLite
  event store, web server, terminal UI, HTTP, subprocess, or filesystem
  APIs.
- Application crates MAY depend on domain crates and port traits.
- Source adapters MUST sit behind their own per-source port and MUST NOT
  depend on one another's internals. This isolation is the binding
  invariant; the granularity at which adapters are packaged (separate
  `console-adapter-*` crates versus per-source modules in a single
  adapters crate) is NOT mandated -- the implementation MAY use either,
  and currently realizes adapters as per-source modules. The Architecture
  Tests MUST enforce the isolation at whatever granularity is in use.
- UI crates MUST talk only to projections and command APIs, never
  directly to source systems (Beads, Fabro, LiveSpec, Dispatcher,
  GitHub).
- No console crate may invoke the `bd` CLI or parse Beads-native records:
  work-item state enters only through the orchestrator-CLI port
  (`list-work-items --json`), carrying the orchestrator-computed `lane` /
  `lane_reason` verbatim.

```mermaid
flowchart TB
  subgraph Forbidden["Forbidden dependencies"]
    DomainX["domain"]
    AdapterX["adapters"]
    DbX["SQLite event store"]
    WebX["web"]
    TuiX["tui"]
    ProcessX["subprocess"]
  end

  DomainX -. "MUST NOT depend on" .-> AdapterX
  DomainX -. "MUST NOT depend on" .-> DbX
  DomainX -. "MUST NOT depend on" .-> WebX
  DomainX -. "MUST NOT depend on" .-> TuiX
  DomainX -. "MUST NOT depend on" .-> ProcessX
```

```mermaid
flowchart LR
  Domain["console-domain"]
  App["console-application (+ per-source adapter modules)"]
  EventStore["console-eventstore"]
  Tui["console-tui"]
  Web["console-web future"]
  Cli["console-cli"]
  Arch["console-arch-check"]

  App --> Domain
  EventStore --> App
  Tui --> App
  Web --> App
  Cli --> App
  Arch --> App
```

### Architecture Tests

The repo MUST include architecture tests inspired by ArchUnitTS and
ArchUnitPython, adapted to Rust. They exist as a first-class compiled
check (`console-arch-check`) and run inside `just check` and CI.

The Architecture Tests MUST enforce the Domain-Driven Design layering
invariants stated above; that bullet list is the single source of truth
for the rule set, and this section MUST NOT restate a divergent copy of
it. Concretely, the checks MUST enforce at least:

- the workspace crate-graph layering (no forbidden dependency
  direction), and
- domain has no dependency on adapters, the SQLite event store, web
  server, TUI, HTTP, subprocess, or filesystem APIs, and
- source adapters do not depend on one another's internals (at the
  packaging granularity in use), and
- UI does not call Beads/Fabro/LiveSpec/GitHub directly, and
- no crate invokes `bd` or embeds a Beads-native read path (the
  zero-Beads-knowledge rule), and
- product crates do not use `unwrap`/`expect` outside allowed scopes,
  and
- event and command types live in domain/application contracts, not
  adapters, and
- all use cases return typed `Result`.

Each enforced rule MUST be stated and checked falsifiably -- strongly
enough that a reviewer can name an input that makes it fail:

- The crate-graph dependency rules MUST be enforced from a structured
  crate-graph source (`cargo metadata` or equivalent), NOT a text scan.
- Source-level rules (e.g. the `unwrap`/`expect` ban, the
  event/command-type placement, the adapter-isolation rule when adapters
  are modules) MUST be checked at the Rust AST level, distinguishing
  real calls/items from substrings in comments, strings, and identifiers
  such as `unwrap_or`. A bare text scan does NOT satisfy these rules.

```mermaid
flowchart TB
  Metadata["cargo metadata (crate graph)"]
  Ast["Rust AST scan"]
  Rules["architecture rule set (= DDD layering)"]
  Findings["arch-check findings"]
  Check["just check / CI"]

  Metadata --> Rules
  Ast --> Rules
  Rules --> Findings
  Findings --> Check
```

## Scenarios

The `##` H2 sections below are the contributor-facing behavioral
scenarios for this document's own normative clauses, per the
§"Behavioral Coverage" binding rule above (operator-facing scenarios
live in `scenarios.md`). Each theme groups the normative clauses of one
clause-bearing section of this file; the `tests/heading-coverage.json`
registry binds every NFR clause gap-id to the theme H2 below that covers
it, and each theme carries a top-of-pyramid acceptance/integration test.
Together the themes span every contributor-facing normative clause in
this document, so the behavioral-coverage checker reaches `fail` mode
with zero unlinked NFR clauses.

## Contributor Scenario A -- Functional / non-functional placement boundary

```mermaid
flowchart TB
  New["New spec content"]
  Litmus{"Operator-observable?"}
  Spec["spec.md (intent/behavior)"]
  Contracts["contracts.md (wire contracts)"]
  Constraints["constraints.md (operator-observable constraints)"]
  Scenarios["scenarios.md (operator scenarios)"]
  NFR["non-functional-requirements.md (contributor-only)"]

  New --> Litmus
  Litmus -- "yes" --> Spec
  Litmus -- "yes" --> Contracts
  Litmus -- "yes" --> Constraints
  Litmus -- "yes" --> Scenarios
  Litmus -- "no (binds only contributors)" --> NFR
```

```gherkin
Feature: Content lands on the correct side of the functional boundary
  As a console contributor or agent
  I want a single litmus that routes new content to the right file
  So that operator-facing spec and contributor-facing NFR stay separated

  Background:
    Given non-functional-requirements.md is read alongside spec.md,
      contracts.md, constraints.md, and scenarios.md

  Scenario: Operator-observable intent routes to the functional files
    Given a proposed rule about operator-facing intent or behavior
    When a contributor applies the boundary litmus
    Then operator-facing intent or behavior lands in spec.md
    And operator-facing wire contracts land in contracts.md
    And constraints an operator could observe land in constraints.md
    And operator-facing scenarios land in scenarios.md

  Scenario: A contributor-only constraint moves out of constraints.md
    Given a constraint whose violation no operator could observe
    When a contributor applies the constraints.md <-> NFR litmus
    Then the constraint moves into non-functional-requirements.md
    And an event-sourcing safety guarantee an operator relies on
      stays in constraints.md
```

## Contributor Scenario B -- Red-Green-Replay gates Rust product commits

```mermaid
sequenceDiagram
  participant Dev as Contributor
  participant Hook as commit-msg hook
  participant Check as just check
  Dev->>Hook: Red commit (test only + failing evidence)
  Dev->>Hook: Green amend (implementation + passing evidence)
  Dev->>Hook: Final commit (test + impl + both trailer sets)
  Hook->>Check: validate staged phases + trailers
  Check-->>Dev: reject when a phase or trailer is missing
```

```gherkin
Feature: Red-Green-Replay commit discipline for Rust product changes
  As the console repository
  I want product commits to prove test-first evidence mechanically
  So that no Rust product change lands without a failing-then-passing trail

  Scenario: A well-formed Red-Green-Replay sequence is accepted
    Given a Rust product change
    When the Red commit stages only the test and records failing evidence
    And the Green amend stages the implementation and records passing evidence
    And the final commit carries test, implementation, and both trailer sets
    Then the commit-msg hook and just check accept the sequence

  Scenario: A commit that violates the staged phases is rejected
    Given a product commit missing a required staged phase or trailer
    When the commit-msg hook and just check evaluate it
    Then the commit is rejected

  Scenario: A non-product change uses the family exemption
    Given a spec-only or other non-product change
    When the contributor applies the non-product exemption pattern
    Then the Red-Green-Replay staged-phase requirement does not apply
```

## Contributor Scenario C -- Quality gate enforces the inner and merge loops

```mermaid
flowchart LR
  Classify["classify changed paths (fail closed)"]
  subgraph Docs["code-neutral documentation lane"]
    Static["doctor-static + charter validation"]
    Tombstone["plan tombstone + record + anchor validation"]
  end
  subgraph Inner["just check (full inner loop)"]
    Fmt["fmt --check"]
    Clippy["clippy -D warnings"]
    Tests["cargo test + nextest"]
    Cov["100% line + region coverage, no carve-outs"]
    Props["property tests"]
    Audit["cargo deny + machete"]
    Arch["arch checks"]
  end
  subgraph Merge["merge gate (per PR)"]
    Fuzz["fuzz >=60s/target, no new crash"]
    Mut["mutants --in-diff, no unjustified survivor"]
  end
  subgraph Night["nightly (canonical branch)"]
    Soak["fuzz soak + full mutation sweep"]
    Chore["finding -> chore filed unranked at beads open (adopted+ranked by orchestrator); never fail master"]
  end
  Classify -->|docs only| Docs --> Green["ci-green"]
  Classify -->|other / uncertain| Inner --> Merge --> Green
  Merge --> Night
```

```gherkin
Feature: Cost-and-determinism split of the contributor quality gate
  As the console CI and local inner loop
  I want fast deterministic checks separated from slow ones
  So that the implementation loop is never slowed or thrashed

  Scenario: The inner loop runs the fast deterministic checks
    Given a push or pull request
    When just check runs
    Then it includes fmt --check, clippy denying warnings,
      cargo test and cargo nextest, 100% line and region coverage over every
      workspace library with no per-crate carve-outs, property tests,
      cargo deny and cargo machete, and the architecture checks
    And it excludes fuzz and mutation runs
    And a code path that resists a meaningful unit test is redesigned
      rather than annotated with a coverage exclusion

  Scenario: The merge gate adds fuzzing and diff-scoped mutation
    Given a code-bearing pull request
    When the merge gate runs
    Then each fuzz target runs a bounded pass of at least 60 seconds
      seeded from the committed corpus, and any new crash fails the merge
    And every crashing input is committed to the corpus
    And cargo mutants runs scoped to the changed lines over the logic
      crates, failing the merge on any surviving mutant not on the
      justified-survivor allow-list

  Scenario: A code-neutral documentation change uses the lightweight lane
    Given every changed path is CHANGELOG.md, a Markdown file beneath .ai or
      plan, or an explicitly allowed documentation file
    And neither side of a rename escapes that allow-list
    And every changed endpoint is a non-executable regular file or the absent
      side of a regular-file addition or deletion
    When CI classifies the pull request or canonical-branch push
    Then it does not schedule the Rust matrix, real-TUI end-to-end job,
      mutation testing, or fuzzing
    And it runs check-doctor-static, check-charters,
      check-plan-no-tombstone, check-plan-record-conformance, and
      check-plan-anchor-declared
    And it reports the same required ci-green context as the full gate
    And the skipped code-only jobs are neutral because the classifier selected
      the documentation lane

  Scenario: Classification uncertainty selects the full gate
    Given the changed paths are empty, unavailable, unrecognized, or include
      a behavior-bearing path, symlink, submodule, or mode change
    When CI classifies the change
    Then it runs the full inner and merge gates
    And a skipped full-gate job fails ci-green

  Scenario: The required aggregate fails closed in either lane
    Given the classifier selected either the documentation lane or the full gate
    When a required job for that lane is skipped, fails, or is cancelled
    Then ci-green fails
    And the same required context name is reported in both lanes

  Scenario: A nightly finding opens a chore instead of failing master
    Given the scheduled nightly fuzz soak and full mutation sweep
    When a new crash or a new un-allow-listed surviving mutant is found
    Then the canonical branch does not fail
    And a chore work-item is filed in the livespec-console-beads-fabro
      tenant through the tailnet beads write ingress
    And that filing carries the finding fingerprint and the
      ci-soak-finding label
    And the item lands unranked at the beads default open status,
      outside the orchestrator lifecycle states, at the filing step
    And the orchestrator's own ledger normalization -- not this
      console -- later adopts the item into backlog and assigns it a
      real rank
```

## Contributor Scenario D -- Behavioral coverage links every clause to a tested scenario

```mermaid
flowchart LR
  Clause["normative MUST/SHOULD clause"]
  Registry["tests/heading-coverage.json"]
  H2["live scenario H2"]
  Test["top-of-pyramid test"]
  Gate["just check / CI (fail mode once landed)"]
  Clause --> Registry --> H2
  Registry --> Test
  H2 --> Gate
  Test --> Gate
```

```gherkin
Feature: Clause -> scenario -> test behavioral-coverage chain
  As the console specification
  I want every normative clause bound to a tested scenario
  So that the implementation provably realizes the spec and cannot regress

  Scenario: Every normative clause resolves to a live tested scenario
    Given a normative MUST or SHOULD clause in a clause-bearing spec file
    When the behavioral-coverage checker evaluates the link registry
    Then the clause links to a scenario H2 in its audience-appropriate
      target, operator clauses to scenarios.md and this document's
      clauses to this Scenarios section
    And that scenario H2 carries a corresponding top-of-pyramid
      acceptance or integration test

  Scenario: The gate runs in fail mode once the checker lands
    Given the first-class Rust behavioral-coverage checker is wired
    When it runs inside just check and CI in fail mode
    Then the build fails on any normative clause not linked to a scenario
    And the build fails on any scenario without a corresponding test

  Scenario: A dangling or untested link does not satisfy the guardrail
    Given a registry link whose scenario name resolves to no live H2
    Or a live scenario H2 with no registered test
    When the checker evaluates coverage
    Then neither is counted as satisfying the guardrail
    And enforcement attaches to the real checker, never to a fail-closed
      placeholder that would deadlock the merge gate
```

## Contributor Scenario E -- Beads/Fabro family secret convention

```mermaid
flowchart LR
  OP["1Password Environment wrapper"]
  Bare["single bare BEADS_DOLT_PASSWORD"]
  Repo["this repository's own processes"]
  Ingress["dolt-server write ingress -- credentialed by dolt-server, not by this convention"]
  Beads["livespec-console-beads-fabro tenant"]
  CI["CI -- SSH key only, never holds the secret"]
  OP --> Bare --> Repo --> Beads
  CI -- "SSH key" --> Ingress --> Beads
```

```gherkin
Feature: One bare family secret for work-items access
  As the console and its CI
  I want a single uniform secret convention
  So that work-items access never depends on per-tenant secret variables

  Scenario: The console uses the single bare secret
    Given the 1Password Environment wrapper
    When the console or its docs reference the work-items secret
    Then they use one bare BEADS_DOLT_PASSWORD
    And there is no per-tenant BEADS_DOLT_PASSWORD_<tenant> variable
      and no per-tenant-to-bare mapping
    And the secret is never committed or echoed

  Scenario: CI writes to work-items without ever holding the secret
    Given a CI job that needs work-items access, such as nightly
      chore-opening
    When it files into the Beads tenant
    Then it authenticates to the tailnet write ingress with an SSH key
      alone
    And it never obtains BEADS_DOLT_PASSWORD
    And how the ingress host credentials its own bd is left to
      dolt-server's sealed credential profile, not asserted by this
      convention
```

## Contributor Scenario F -- Implementation language and the unsafe-code ban

```mermaid
flowchart LR
  Product["product crate"]
  Rust["Rust"]
  Forbid["#![forbid(unsafe_code)]"]
  Product --> Rust --> Forbid
```

```gherkin
Feature: Rust product code with unsafe forbidden by default
  As the console workspace
  I want the implementation language and memory-safety floor fixed
  So that product code is uniformly Rust and free of unsafe blocks

  Scenario: Product code is Rust and forbids unsafe
    Given a product crate in the workspace
    When it is compiled
    Then its product code is Rust
    And it declares #![forbid(unsafe_code)] absent a future spec
      revision granting a narrow exception
```

## Contributor Scenario G -- Railway-oriented error handling

```mermaid
flowchart LR
  In["use-case input"]
  Validate["validate"]
  Transform["transform"]
  Port["call port"]
  MapErr["map errors (typed Result)"]
  Emit["emit events"]
  In --> Validate --> Transform --> Port --> MapErr --> Emit
```

```gherkin
Feature: Typed-Result railway error discipline
  As the domain and application layers
  I want expected failures modeled as values, not panics
  So that error paths are total, typed, and testable

  Scenario: Expected failures are typed Results, panics are bugs
    Given domain or application code handling an expected failure
    When the failure occurs
    Then it is represented with a typed Result value
    And a panic is treated as a bug rather than domain control flow
    And no unwrap or expect is used outside tests and startup wiring

  Scenario: Error types separate rejection from infrastructure failure
    Given a use case that can fail
    When it maps its errors
    Then the error type distinguishes domain rejection from
      infrastructure failure
    And the use case reads as a railway pipeline that validates,
      transforms, calls a port, maps errors, and emits events
```

## Contributor Scenario H -- Domain-driven boundaries are preserved

```mermaid
flowchart TB
  Domain["console-domain"]
  App["console-application (+ per-source adapter modules)"]
  Infra["adapters / event store / web / tui / subprocess / fs"]
  UI["UI"]
  Proj["projections + command APIs"]
  Sources["Beads / Fabro / LiveSpec / Dispatcher / GitHub"]
  App --> Domain
  Domain -. "must not depend on" .-> Infra
  UI --> Proj
  UI -. "never directly" .-> Sources
```

```gherkin
Feature: Bounded-context layering invariants
  As the console workspace
  I want domain, application, adapters, and UI kept in their lanes
  So that the layering that architecture tests enforce holds by design

  Scenario: Contexts own their language and domain stays infra-free
    Given the console bounded contexts
    When their code is structured
    Then each context owns its language, commands, events, invariants,
      and projections
    And domain crates do not depend on adapters, the SQLite event store,
      web server, terminal UI, HTTP, subprocess, or filesystem APIs

  Scenario: Adapters and UI respect their isolation
    Given per-source adapters and the UI crates
    When they are wired
    Then each source adapter sits behind its own per-source port and does
      not depend on another adapter's internals, at whatever packaging
      granularity is in use
    And UI crates talk only to projections and command APIs, never
      directly to Beads, Fabro, LiveSpec, Dispatcher, or GitHub
    And no crate invokes bd or parses Beads-native records; work-item
      state enters only through the orchestrator-CLI port
```

## Contributor Scenario I -- Architecture tests enforce the layering invariants

```mermaid
flowchart TB
  Meta["cargo metadata (crate graph)"]
  Ast["Rust AST scan"]
  Rules["arch rule set (= DDD layering)"]
  Check["console-arch-check in just check / CI"]
  Meta --> Rules
  Ast --> Rules
  Rules --> Check
```

```gherkin
Feature: First-class falsifiable architecture tests
  As the console repository
  I want the layering invariants checked mechanically and falsifiably
  So that a reviewer can name the input that makes each rule fail

  Scenario: A compiled arch check enforces the DDD layering
    Given the console-arch-check first-class compiled check
    When just check and CI run
    Then it enforces the Domain-Driven Design layering invariants as the
      single source of truth, without restating a divergent copy
    And it enforces at least the crate-graph layering, domain's freedom
      from infrastructure, adapter isolation, the UI-to-source rule, the
      unwrap/expect ban, event/command-type placement, and typed-Result
      use cases

  Scenario: Rules are sourced structurally and stated falsifiably
    Given the architecture rule set
    When a rule is evaluated
    Then each rule is stated and checked falsifiably
    And crate-graph dependency rules are enforced from a structured
      crate-graph source such as cargo metadata rather than a text scan
    And source-level rules are checked at the Rust AST level, telling real
      calls and items apart from substrings in comments, strings, and
      identifiers such as unwrap_or
```

## Contributor Scenario J -- Cross-repo action-surface parity

```mermaid
flowchart TB
  Upstream["Orchestrator published human action surface"]
  Registry["Console action registry"]
  Parity{"Parity check (just check + CI)"}
  Bound["Bound: registry action id"]
  Omitted["Omitted: recorded non-empty reason"]
  Red["Red build naming the action"]

  Upstream --> Parity
  Registry --> Parity
  Parity -->|"every action bound"| Bound
  Parity -->|"deliberate omission"| Omitted
  Parity -->|"unbound, no reason"| Red
```

```gherkin
Feature: Registry parity with the orchestrator's published action surface
  As a LiveSpec contributor
  I want an unbound upstream action to fail the build with a name
  So that the console's action set cannot silently fall behind the orchestrator

Scenario: An unbound published action is a red build
  Given the orchestrator publishes a human action the registry does not bind
  And no omission reason is recorded for it
  When the parity check runs
  Then the build fails naming that action

Scenario: A deliberate omission with a recorded reason passes
  Given a published action deliberately omitted from the registry
  And the omission carries a recorded non-empty reason
  When the parity check runs
  Then the check passes and the omission remains visible in the mapping

Scenario: The check demonstrates it can fail
  Given the parity check is introduced against a surface with unbound valve actions
  When it first runs
  Then it is born red naming those actions before the bindings or reasons land
```
